load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lang",
    srcs = [
        "codept.go",
        "deps.go",
        "dune.go",
        "generate.go",
        "lang.go",
        "library.go",
        "ppx.go",
        "sexp.go",
        "spec.go",
    ],
    importpath = "github.com/tweag/okapi/lang",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//language/go:go_default_library",
        "@bazel_gazelle//language/proto:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@bazel_gazelle//walk:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

go_test(
    name = "lang_test",
    srcs = [
        "sexp_test.go",
        "dune_test.go",
    ],
    embed = [":lang"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "codept.go",
        "deps.go",
        "dune.go",
        "dune_test.go",
        "generate.go",
        "lang.go",
        "library.go",
        "ppx.go",
        "sexp.go",
        "sexp_test.go",
        "spec.go",
    ],
    visibility = ["//visibility:public"],
)
