load("@io_bazel_rules_go//go/tools/bazel_testing:def.bzl", "go_bazel_test")

go_bazel_test(
    name = "bazel_test",
    srcs = [
        "project_test.go",
    ],
    rule_files = [
        "@okapi//:all_files",
        "@bazel_gazelle//:all_files",
        "@io_bazel_rules_go//:all_files",
    ],
)
