load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_archive", "ocaml_signature")

ocaml_signature(
    name = "a2__sig",
    src = ":a2.mli",
    deps = [":f1"],
)

ocaml_module(
    name = "a2",
    sig = ":a2__sig",
    struct = ":a2.ml",
    deps = [":f1"],
)

ocaml_module(
    name = "a3",
    struct = ":a3.ml",
    deps = [
        ":a2",
        ":f1",
    ],
)

ocaml_signature(
    name = "f1__sig",
    src = ":f1.mli",
)

ocaml_module(
    name = "f1",
    sig = ":f1__sig",
    struct = ":f1.ml",
)

# okapi:auto
# okapi:public_name a
ocaml_ns_archive(
    name = "#A",
    submodules = [
        ":a2",
        ":a3",
        ":f1",
    ],
    visibility = ["//visibility:public"],
)
