load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_library", "ocaml_signature")

ocaml_signature(
    name = "deppy_sig",
    src = ":deppy.mli",
    deps = ["@okapi-test//virt:#Virt"],
)

ocaml_module(
    name = "deppy",
    sig = ":deppy_sig",
    struct = ":deppy.ml",
    deps = ["@okapi-test//virt:#Virt"],
)

# okapi:auto
# okapi:public_name dep
ocaml_ns_library(
    name = "#Dep",
    submodules = [":deppy"],
    visibility = ["//visibility:public"],
)
