load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_executable", "ocaml_module")

ocaml_module(
    name = "main",
    struct = ":main.ml",
    deps = [
        "@okapi-test//dep:#Dep",
        "@okapi-test//impl:#Impl",
    ],
)

# okapi:auto
# okapi:public_name exe
ocaml_executable(
    name = "exe-exe",
    main = "main",
    visibility = ["//visibility:public"],
    deps = ["@okapi-test//impl:#Impl"],
)
