load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_executable", "ocaml_module")

ocaml_module(
    name = "main",
    struct = ":main.ml",
    deps = [
        "@okapi-test//dep:#Dep",
        "@okapi-test//impl:#Impl",
    ],
)

# okapi:auto
# okapi:public_name main_public_name
ocaml_executable(
    name = "exe-main_public_name",
    main = "main",
    visibility = ["//visibility:public"],
    deps = ["@okapi-test//impl:#Impl"],
)
