load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_library")

# okapi:implements virt
ocaml_module(
    name = "virty",
    struct = ":virty.ml",
    implements = "@okapi-test//virt:#Virt",
)

# okapi:implements virt
# okapi:implementation impl
# okapi:public_name impl
ocaml_ns_library(
    name = "#Impl",
    submodules = [":virty"],
    visibility = ["//visibility:public"],
)
