load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_ns_library", "ocaml_signature")

# okapi:virt virt
ocaml_signature(
    name = "virty",
    src = ":virty.mli",
    virtual = True,
    visibility = ["//visibility:public"],
)

# okapi:auto
# okapi:public_name virt
ocaml_ns_library(
    name = "#Virt",
    submodules = [":virty"],
    visibility = ["//visibility:public"],
)
