load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_library", "ocaml_signature")

ocaml_signature(
    name = "a2_sig",
    src = ":a2.mli",
    deps_opam = [],
    opts = [],
    deps = [":f1"],
)

ocaml_module(
    name = "a2",
    deps_opam = [],
    opts = [],
    sig = ":a2_sig",
    struct = ":a2.ml",
    deps = [":f1"],
)

ocaml_module(
    name = "a3",
    deps_opam = [],
    opts = [],
    struct = ":a3.ml",
    deps = [
        ":a2",
        ":f1",
    ],
)

ocaml_signature(
    name = "f1_sig",
    src = ":f1.mli",
    deps_opam = [],
    opts = [],
)

ocaml_module(
    name = "f1",
    deps_opam = [],
    opts = [],
    sig = ":f1_sig",
    struct = ":f1.ml",
)

# okapi:auto
ocaml_ns_library(
    name = "##A",
    submodules = [
        "a2",
        "a3",
        "f1",
    ],
    visibility = ["//visibility:public"],
)
