load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_library", "ocaml_signature", "ppx_executable", "ppx_module", "ppx_ns_library")

ocaml_module(
    name = "final",
    deps_opam = [
        "angstrom",
        "re",
        "ipaddr",
    ],
    opts = [
        "-open",
        "Angstrom",
    ],
    struct = ":final.ml",
)

ocaml_signature(
    name = "new_sig",
    src = ":new.mli",
    deps_opam = [
        "angstrom",
        "re",
        "ipaddr",
    ],
    opts = [
        "-open",
        "Angstrom",
    ],
)

ocaml_module(
    name = "new",
    deps_opam = [
        "angstrom",
        "re",
        "ipaddr",
    ],
    opts = [
        "-open",
        "Angstrom",
    ],
    sig = ":new_sig",
    struct = ":new.ml",
)

ocaml_module(
    name = "sub",
    deps_opam = [
        "angstrom",
        "re",
        "ipaddr",
    ],
    opts = [
        "-open",
        "Angstrom",
    ],
    struct = ":sub.ml",
)

# okapi:auto
# okapi:public_name sub-lib
ocaml_ns_library(
    name = "#Sub_lib",
    submodules = [
        ":final",
        ":new",
        ":sub",
    ],
    visibility = ["//visibility:public"],
)

ppx_executable(
    name = "ppx_sub_extra_lib",
    deps_opam = ["ppx_inline_test"],
    main = "@obazl_rules_ocaml//dsl:ppx_driver",
)

ocaml_signature(
    name = "foo_sig",
    src = ":foo.mli",
    deps_opam = ["ppx_inline_test"],
    opts = [],
    ppx = ":ppx_sub_extra_lib",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    deps = [
        ":bar",
        "@okapi-test//a:#A",
    ],
)

ppx_module(
    name = "foo",
    deps_opam = ["ppx_inline_test"],
    opts = [],
    ppx = ":ppx_sub_extra_lib",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    sig = ":foo_sig",
    struct = ":foo.ml",
    deps = [
        ":bar",
        "@okapi-test//a:#A",
    ],
)

ppx_module(
    name = "bar",
    deps_opam = ["ppx_inline_test"],
    opts = [],
    ppx = ":ppx_sub_extra_lib",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    struct = ":bar.ml",
    deps = ["@okapi-test//a:#A"],
)

# okapi:public_name sub-extra-lib
ppx_ns_library(
    name = "#Sub_extra_lib",
    submodules = [
        ":bar",
        ":foo",
    ],
    visibility = ["//visibility:public"],
)
